05-05-2025 HR functionalities